Added a database and completed the api calling successfully on a 30 sec interval

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-
+{{ header }}
 <!-- display any temporary flash messages  -->
 {% for message in get_flashed_messages() %}
 <p class='flashed_message'>{{ message}}</p>
