Added bus stops to database.

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,5 @@
 {% for message in get_flashed_messages() %}
 <p class='flashed_message'>{{ message}}</p>
 {% endfor %}
-
-
+    {% include "map.html" %}
 {% endblock %}
