configured folium template a dn added html tags

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,27 @@
   {% block head %}    <!-- If needed to add more info to the header e.g. title, stylesheet -->
   {% endblock %}
 
-  <!-- Use Google fonts for nice text  -->
-  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+  <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+    <script>
+        setInterval(update_map, 30000);
+        function update_map(){
+            $("#map").getJSON("/update_map", function(data){
+
+            })
+        }
+    </script>
 </head>
 
 <body>
