--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,24 @@
 
 {% block content %}
 
-{{ header }}
+{{header}}
+    <form action={{url_for('get_map')}} method="POST">
+    <select id="selected_route" name="routes">
+        <option value=0>
+            Select all routes
+        </option>
+        {% for row in routes %}
+            <option value="{{ row.route }}">{{row.route}}</option>
+        {% endfor %}
+    </select>
+    <button class = "btn btn-primary" type="submit">
+        Show Map
+    </button>
+    </form>
+
+
 <!-- display any temporary flash messages  -->
 {% for message in get_flashed_messages() %}
 <p class='flashed_message'>{{ message}}</p>
 {% endfor %}
-    {% include "map.html" %}
 {% endblock %}
