--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,8 @@
 <head>
   <title>Metro Mapper</title>
 
-  {% block head %}    <!-- If needed to add more info to the header e.g. title, stylesheet -->
+  {% block head %}<!-- If needed to add more info to the header e.g. title, stylesheet -->
+
   {% endblock %}
 
   <!-- Latest compiled and minified CSS -->
@@ -17,26 +18,43 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
-  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
-    <script>
-        setInterval(update_map, 30000);
-        function update_map(){
-            $("#map").getJSON("/update_map", function(data){
-
-            })
-        }
-    </script>
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+<style>
+    #map{
+        height: 100%;
+        width: 100%;
+    }
+</style>
 </head>
 
 <body>
 
 
   {% block content %}   <!-- A block that the child template will fill in -->
-
   {% endblock %}
+  <div id="map" style="width: 500px; height: 500px;"></div>
+  {% block scripts %}
+      <script>
+        function initMap() {
+            $.get('/get_location', function (data) {
+                var obj = JSON.parse(data);
+                map = new google.maps.Map(document.getElementById('map'), {
+                    center: {lat: obj.lat, lng: obj.lon},
+                    zoom: 15
+                });
+                var marker = new google.maps.Marker({
+                    position: new google.maps.LatLng(
+                        obj.center.lat, obj.center.lon
+                    ),
+                    title: 'My Location',
+                    map: map
+                });
+            });
+        }
+      </script>
 
-  {% block scripts %}   <!-- If needed, to add scripts or links to scripts. -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDIehXRmSgi0yUudZcHyGR1WCDYh8tntc&callback=initMap" async defer type="text/javascript"></script>
+      <script src="./static/render_map.js"></script>
   {% endblock %}
 </body>
 </html>
