--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,7 @@
         width: 100%;
     }
 </style>
-<script src="{{ url_for('static', filename='render_map.js') }}"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDIehXRmSgi0yUudZcHyGR1WCDYh8tntc&callback=initMap" async defer type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js">
 </head>
 
 <body>
@@ -34,7 +33,6 @@
 
   {% block content %}   <!-- A block that the child template will fill in -->
   {% endblock %}
-  <div id="map" style="width: 500px; height: 500px;"></div>
   {% block scripts %}
   {% endblock %}
 </body>
