--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {{header}}
+    <h1>{{header}}</h1>
 <select id="selected_route" name="radius">
         <option value=3>
             Default Radius
@@ -20,14 +20,12 @@
         Show Close Buses
     </button>
     <button id="clear_button" class="btn btn-warning">
-    Clear directions and markers
+        Clear directions and markers
     </button>
     <button id="clear_direction" class="btn btn-warning">
-    Clear directions
+        Clear directions
     </button>
     <div id="map" style="width: 500px; height: 500px;"></div>
-    <script src="{{ url_for('static', filename='render_map.js') }}"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDIehXRmSgi0yUudZcHyGR1WCDYh8tntc" async defer type="text/javascript"></script>
 {% endblock content %}
 
 <!-- display any temporary flash messages  -->
